# book-rust-web-programming

./: .gitignore  README.md
ch4_processing_http_requests/: .env  .gitignore  Cargo.toml  Dockerfile  RustWebProgramming_to_do.postman_collection.json  docker-compose.yml  state.json
ch4_processing_http_requests/css/: base.css  main.css
ch4_processing_http_requests/deploy/: docker-compose.yml  push_to_dockerhub.sh  push_to_server.sh
ch4_processing_http_requests/deploy/nginx/: nginx.conf
ch4_processing_http_requests/javascript/: login.js  main.js
ch4_processing_http_requests/migrations/2021-07-23-182048_create_users/: up.sql
ch4_processing_http_requests/migrations/2021-07-25-163837_user_title_constraint/: up.sql
ch4_processing_http_requests/src/: main.rs  state.rs
ch4_processing_http_requests/src/auth/: jwt.rs  mod.rs  processes.rs
ch4_processing_http_requests/src/json_serialization/: to_do_items.rs
ch4_processing_http_requests/src/models/item/: item.rs  new_item.rs
ch4_processing_http_requests/src/models/user/: new_user.rs  user.rs
ch4_processing_http_requests/src/to_do/structs/: base.rs  done.rs  pending.rs
ch4_processing_http_requests/src/views/: mod.rs  token.rs
ch4_processing_http_requests/src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
ch4_processing_http_requests/src/views/auth/: login.rs  mod.rs
ch4_processing_http_requests/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  (+2 more)
ch4_processing_http_requests/templates/: login.html  main.html
ch4_processing_http_requests/templates/components/: header.html
(+18 files in other folders)
