[package]
name = "ch4_processing_http_requests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-service = "1.0.6"
actix-web = "2"
bcrypt = "0.8.2"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.5"
hmac = "0.8.1"
jwt = "0.9.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
sha2 = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
